// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expressions > arithmetics > handles chained math with precedence 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": -1,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Pow",
    },
    {
      "arg1": 4,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": 6,
      "code": "Const",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "code": "Mod",
    },
    {
      "code": "Div",
    },
    {
      "code": "Sub",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > and 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "And",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > and short-circuit 1`] = `
{
  "main": [
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "whatever",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "And",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > compare 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "arg1": 456,
      "code": "Const",
    },
    {
      "code": "Lt",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > deep eq 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "DeepEq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq ref 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > eq ref 2 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Tuple",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > in 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "key",
        "symbol": "atom:key",
      },
      "code": "Const",
    },
    {
      "arg1": {
        "name": "key",
        "symbol": "atom:key",
      },
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": {
        "name": "key2",
        "symbol": "atom:key2",
      },
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Record",
    },
    {
      "code": "In",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > not on boolean 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > not on not boolean 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Not",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > or 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "Or",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > boolean expressions > or short-circuit 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "arg1": {
        "ref": "whatever",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Or",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > function call multiple args 1`] = `
{
  "fn_34": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_34",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > immediately invoked function expression (iife) 1`] = `
{
  "fn_17": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_17",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > pipe 1`] = `
{
  "fn_30": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_40": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Mul",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_40",
      "code": "Closure",
    },
    {
      "arg1": "fn_30",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > function expressions > return from function 1`] = `
{
  "fn_62": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_62",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > apply combinator 1`] = `
{
  "fn_61": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
  "fn_62": [
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_61",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_67": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_62",
      "code": "Closure",
    },
    {
      "arg1": "fn_67",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > church pair returns first element 1`] = `
{
  "fn_100": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_101": [
    {
      "arg1": {
        "ref": "a",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_100",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_83": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
  "fn_84": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_83",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_85": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_84",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_85",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": "fn_101",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > church pair returns second element 1`] = `
{
  "fn_100": [
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "b",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
  "fn_101": [
    {
      "arg1": "fn_100",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_83": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
  "fn_84": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_83",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_85": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_84",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_85",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": "fn_101",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > deeply nested closures capture outer bindings 1`] = `
{
  "fn_55": [
    {
      "arg1": {
        "ref": "z",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "arg1": {
        "ref": "z",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_56": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_55",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_57": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_56",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_57",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": 3,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "adder",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > either combinator applies first branch 1`] = `
{
  "fn_109": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_118": [
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "v",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Sub",
    },
    {
      "code": "Return",
    },
  ],
  "fn_94": [
    {
      "arg1": {
        "ref": "n",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
  "fn_95": [
    {
      "arg1": {
        "ref": "m",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_94",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "fn_96": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_95",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_96",
      "code": "Closure",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": "fn_109",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": "fn_118",
      "code": "Closure",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > lambda calculus constructs > partial application keeps captured value 1`] = `
{
  "fn_41": [
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "y",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Add",
    },
    {
      "code": "Return",
    },
  ],
  "fn_42": [
    {
      "arg1": {
        "ref": "x",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": "fn_41",
      "code": "Closure",
    },
    {
      "code": "Return",
    },
  ],
  "main": [
    {
      "arg1": "fn_42",
      "code": "Closure",
    },
    {
      "arg1": 5,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "f",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "CallValue",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > memory ops > alloc stores value and returns it via load 1`] = `
{
  "main": [
    {
      "arg1": 42,
      "code": "Const",
    },
    {
      "arg1": "alloc",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Load",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > memory ops > alloc stores value and returns it via load 2`] = `
{
  "26": 42,
}
`;

exports[`expressions > memory ops > free removes stored value 1`] = `
{
  "main": [
    {
      "arg1": 7,
      "code": "Const",
    },
    {
      "arg1": "alloc",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "r",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "free",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > symbols > creates a named symbol 1`] = `
{
  "main": [
    {
      "arg1": "foo",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > symbols > symbol equality is by identity, atoms are by name 1`] = `
{
  "main": [
    {
      "arg1": "a",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": "a",
      "code": "Const",
    },
    {
      "arg1": "symbol",
      "arg2": 1,
      "code": "Native",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Store",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "s",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "arg1": {
        "ref": "t",
      },
      "code": "Const",
    },
    {
      "code": "Load",
    },
    {
      "code": "Eq",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > atom 1`] = `
{
  "main": [
    {
      "arg1": {
        "name": "atom",
        "symbol": "atom:atom",
      },
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > false 1`] = `
{
  "main": [
    {
      "arg1": false,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > float 1`] = `
{
  "main": [
    {
      "arg1": 123.456,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > integer 1`] = `
{
  "main": [
    {
      "arg1": 123,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > string 1`] = `
{
  "main": [
    {
      "arg1": "string",
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > string template 1`] = `
{
  "main": [
    {
      "arg1": "hello ",
      "code": "Const",
    },
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "code": "Concat",
    },
    {
      "arg1": " world",
      "code": "Const",
    },
    {
      "code": "Concat",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`expressions > values > true 1`] = `
{
  "main": [
    {
      "arg1": true,
      "code": "Const",
    },
    {
      "code": "Return",
    },
  ],
}
`;

exports[`vm2 integration > adds two numbers and prints the sum 1`] = `
{
  "main": [
    {
      "arg1": 1,
      "code": "Const",
    },
    {
      "arg1": 2,
      "code": "Const",
    },
    {
      "code": "Add",
    },
    {
      "arg1": "print",
      "arg2": 1,
      "code": "Native",
    },
    {
      "code": "Return",
    },
  ],
}
`;
